--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "lint": "eslint .",
+    "prepare": "rm -rf ./lib; babel --out-dir ./lib ./src",
     "prepublish": "rm -rf ./lib; babel --out-dir ./lib ./src",
     "test": "npm run lint",
     "postpublish": "npm run deploy-example",
