--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "live-server": "^1.2.0",
     "mocha": "^3.2.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "yarn": "^1.3.2"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "yarn": "^1.3.2"
+    "classnames": "^2.2.5"
   }
 }
