--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "lint": "eslint .",
-    "prepare": "rm -rf ./lib; babel --out-dir ./lib ./src",
-    "prepublish": "rm -rf ./lib; babel --out-dir ./lib ./src",
+    "prepare": "rm -rf ./lib && babel --out-dir ./lib ./src",
+    "prepublish": "rm -rf ./lib && babel --out-dir ./lib ./src",
     "test": "npm run lint",
     "postpublish": "npm run deploy-example",
     "build-example-js": "browserify ./example/main.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ]",
