--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "lint": "eslint .",
-    "prepare": "rm -rf ./lib && babel --out-dir ./lib ./src",
-    "prepublish": "rm -rf ./lib && babel --out-dir ./lib ./src",
+    "prepare": "rimraf ./lib && babel --out-dir ./lib ./src",
+    "prepublish": "rimraf ./lib && babel --out-dir ./lib ./src",
     "test": "npm run lint",
     "postpublish": "npm run deploy-example",
     "build-example-js": "browserify ./example/main.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ]",
@@ -38,11 +38,12 @@
     "eslint-config-gitbook": "1.5.0",
     "gh-pages": "^0.12.0",
     "http-server": "^0.9.0",
-    "node-sass": "^4.7.2",
     "live-server": "^1.2.0",
     "mocha": "^3.2.0",
+    "node-sass": "^4.7.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "rimraf": "^2.6.2",
     "yarn": "^1.3.2"
   },
   "dependencies": {
