--- a/package.json
+++ b/package.json
@@ -38,14 +38,16 @@
     "eslint-config-gitbook": "1.5.0",
     "gh-pages": "^0.12.0",
     "http-server": "^0.9.0",
-    "node-sass": "^4.7.2",
     "live-server": "^1.2.0",
     "mocha": "^3.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "node-sass": "^4.7.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "yarn": "^1.3.2"
   },
   "dependencies": {
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "create-react-class": "^15.6.3",
+    "prop-types": "^15.6.1"
   }
 }
